# TwitterBotPy

./: .botkun.toml  .gitignore  README.md  create_config_file.sh  entry_points.cfg  main.py  requirements.txt  setup.cfg  setup.py
botkun/: __init__.py  add.py  clear.py  config.py  info.py  main.py  tweet.py
botkun/lib/: database.py  markov.py  twitter_handler.py
tmbot/: __init__.py
tmbot/lib/: markov.py
