[metadata]
name = botkun
version = attr:botkun.__version__
author = lnsf
author_email = lnsf03@gmail.com
description = Twitter Markov Bot
long_description = file:README.md
url = https://github.com/lnsf/TwitterBotPy
license = MIT License
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find:
install_requires =
    python-twitter
    mecab-python3
entry_points = file:entry_points.cfg